--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,16 @@
     <string name="aboutHunkOfText">NOTE: actual conduit size to be used on project should be based on project specific requirements and location of conduit run (e.g., if conduit is to be installed across platform ceiling, then a 4" conduit cannot be used due to Program Coordination restrictions). Calculation below provides the smallest conduit that fits the stated cables. To reduce conduit size, you may need to decrease the number of cables to be run in the conduit and possibly install multiple conduits. You may also need to increase the conduit size to meet project-specific constraints.
 
 For power conductors, make sure appropriate conductor gauge is specified for the rated current. The maximum ampacity of conductor can be found in NEC Annex B, Table B.310. From the table, choose the correct AWG and the insulation used for conductor (Article 310, table 310.13 for insulation details). DON'T forget to multiply by correction factor for ambient temperature!</string>
+    <string name="wire">Wire %1$d</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array
+        name="wireNames">
+
+    </string-array>
+
+    <string-array
+        name="conduitNames">
+
+    </string-array>
 
 </resources>
